@@ -30,7 +30,16 @@
 {% macro html_navigation_links() %}
     <nav id="menu">
     <ul>
-    {% for url, text in navigation_links[lang] %}
+    {{ html_navigation_links_entries(navigation_links) }}
+    {{ html_navigation_links_entries(navigation_alt_links) }}
+    {{ template_hooks['menu']() }}
+    {{ template_hooks['menu_alt']() }}
+    </ul>
+    </nav>
+{% endmacro %}
+
+{% macro html_navigation_links_entries(navigation_links_source) %}
+    {% for url, text in navigation_links_source[lang] %}
         {% if isinstance(url, tuple) %}
             <li> {{ text }}
             <ul>
@@ -50,10 +59,6 @@
             {% endif %}
         {% endif %}
     {% endfor %}
-    {{ template_hooks['menu']() }}
-    {{ template_hooks['menu_alt']() }}
-    </ul>
-    </nav>
 {% endmacro %}
 
 {% macro html_translation_header() %}
