@@ -1,22 +1,0 @@
-## -*- coding: utf-8 -*-
-<%def name="breadcrumbs(crumbs)">
-%if crumbs:
-<nav class="breadcrumbs">
-<ul class="breadcrumb">
-    % for link, text in crumbs:
-        % if text != index_file:
-            % if link == '#':
-                <li class="breadcrumb-item active">${text.rsplit('.html', 1)[0]}</li>
-            % else:
-                <li class="breadcrumb-item"><a href="${link}">${text}</a></li>
-            % endif
-        % endif
-    % endfor
-</ul>
-</nav>
-%endif
-</%def>
-
-<%def name="show_sourcelink(sourcelink_href)">
-    <a href="${sourcelink_href}" id="sourcelink" class="p-2 text-muted">${messages("Source")}</a>
-</%def>
