@@ -30,7 +30,7 @@
 
         <div class="collapse navbar-collapse" id="bs-navbar">
             <ul class="navbar-nav mr-auto">
-                {{ base.html_navigation_links() }}
+                {{ base.html_navigation_links_entries(navigation_links) }}
                 {{ template_hooks['menu']() }}
             </ul>
             {% if search_form %}
@@ -38,6 +38,7 @@
             {% endif %}
 
             <ul class="navbar-nav navbar-right">
+                {{ base.html_navigation_links_entries(navigation_alt_links) }}
                 {% block belowtitle %}
                 {% if translations|length > 1 %}
                     <li>{{ base.html_translations() }}</li>
